Fixed text being misaligned and image is in correct spot. Did not have div set up correctly

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+
+
+
 .header{
     display:flex;
     align-items: center;
@@ -70,12 +73,17 @@
     border:50px;
 }
 
+.bottomtxt{
+    display:flex;
+    padding: 15px 15px;
+    margin:5px;
+    align-self: flex-start;
+    flex-direction: column;
+}
+
 .test{
     display:flex;
-    align-content: flex-start;
-    justify-content: flex-start;
-    border: solid green;
-    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .toptxt{
@@ -85,19 +93,21 @@
     align-self: flex-start;
 }
 
-.bottomtxt{
-    display:flex;
-    padding: 15px 15px;
-    margin:5px;
-    align-self: flex-start;
-}
 
 .cat{
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
     width:450px;
     height:350px;
-    flex-shrink:1;
+    flex-direction: row;
 }
 
+#testtext{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.toptext{
+    display:flex;
+    flex-direction: column;
+}
